<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.itver.jesus.app_gestion_final.ui.vistas.Reporte_Fragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/seccion_reporte"
            android:textColor="@color/negro"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/reporte_descripcion"
            android:textColor="@color/negro"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/reporte_descripcion_imagen"
            android:src="@drawable/logo" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reporte_etiq_button" />

        <EditText
            android:id="@+id/input_reporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_reporte"
            android:drawableLeft="@android:drawable/ic_menu_manage"
            android:hint="@string/reporte_hint_input"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textColorHint="@color/color_blanco"
            android:textColor="@color/color_blanco"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/shape_reporte"
            android:text="@string/reporte_etiq_button_enviar"
            android:textColor="@color/color_blanco" />
    </LinearLayout>
</ScrollView>
