<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/descripcion_logo"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/input_user"
            style="@style/Estilo_Input_Login"
            android:drawableLeft="@android:drawable/ic_menu_my_calendar"
            android:hint="@string/login_etiq_input_User"
            android:inputType="text">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/input_pass"
            style="@style/Estilo_Input_Login"
            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
            android:hint="@string/login_etiq_input_Pass"
            android:inputType="textPassword"
            android:padding="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_login_ingresar"
                style="@style/Estilo_Button_Login"
                android:text="@string/login_etiq_button_sign_in" />

            <Button
                android:id="@+id/button_login_invitado"
                style="@style/Estilo_Button_Login"
                android:text="@string/login_etiq_button_registers" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>